# kilotasks

./: .gitignore  CMakeLists.txt  Makefile  apply.sh
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: ConfigAppearance.qml  ConfigBehavior.qml  ContextMenu.qml  GroupDialog.qml  MouseHandler.qml  SlotCommandDialog.qml  Task.qml  TaskBadgeOverlay.qml  TaskList.qml  main.qml
package/contents/ui/code/: layout.js  tools.js
src/: CMakeLists.txt  plugin.cpp  qmldir  unifiedtasksmodel.cpp  unifiedtasksmodel.h
